--- a/.codespellrc
+++ b/.codespellrc
@@ -1,2 +1,2 @@
 [codespell]
-skip = ./showcases/screen-reader/translations.ts
+skip = showcases/screen-reader/translations.ts,*.lock,*.json,node_modules,.git,__snapshots__
