--- a/.github/workflows/99-self-healing-dependabot-updates.yml
+++ b/.github/workflows/99-self-healing-dependabot-updates.yml
@@ -28,7 +28,7 @@ jobs:
             echo "Prettier update detected."
             echo "prettier_update=true" >> $GITHUB_ENV
           else
-            echo "No Stylelint or prettier updates detected."
+            echo "No Stylelint or Prettier updates detected."
           fi
 
       - name: 🆙 Set up Node.js
@@ -53,21 +53,8 @@ jobs:
         run: |
           npm run codestyle
 
-      # TODO: Maybe we would want to move this to .github/actions/auto-commit
-      - name: 🚦 Check for changes before committing
-        if: env.stylelint_update == 'true' || env.prettier_update == 'true'
-        id: check_changes
-        run: |
-          if [[ -z "$(git status --porcelain)" ]]; then
-            echo "No changes to commit. Skipping auto-commit step."
-            echo "changes_detected=false" >> $GITHUB_ENV
-          else
-            echo "Changes detected. Proceeding to auto-commit step."
-            echo "changes_detected=true" >> $GITHUB_ENV
-          fi
-
       - name: 🚘 Auto commit
-        if: env.changes_detected == 'true'
+        if: env.stylelint_update == 'true' || env.prettier_update == 'true'
         uses: ./.github/actions/auto-commit
         with:
           branch-name: "${{ github.head_ref }}-auto"
