--- a/.github/actions/auto-commit/action.yml
+++ b/.github/actions/auto-commit/action.yml
@@ -32,7 +32,7 @@ runs:
           echo "No changes to commit. Skipping auto-commit step."
           echo "changes_detected=false" >> $GITHUB_ENV
         else
-          echo "Changes detected. Proceeding to auto-commit step."
+          echo "Changes detected. Proceeding with creating a new branch and commit changes."
           echo "changes_detected=true" >> $GITHUB_ENV
         fi
 
