--- a/.github/workflows/99-self-healing-dependabot-updates.yml
+++ b/.github/workflows/99-self-healing-dependabot-updates.yml
@@ -21,14 +21,14 @@ jobs:
         id: check_pr
         run: |
           echo "PR title: ${{ github.event.pull_request.title }}"
-          if [[ "${{ github.event.pull_request.title }}" =~ "bump stylelint from" ]]; then
+          if [[ "${{ github.event.pull_request.title }}" =~ "bump stylelint from" ]] || [[ "${{ github.event.pull_request.title }}" =~ "bump the stylelint group with" ]]; then
             echo "Stylelint update detected."
             echo "stylelint_update=true" >> $GITHUB_ENV
-          elif [[ "${{ github.event.pull_request.title }}" =~ "bump prettier from" ]]; then
+          elif [[ "${{ github.event.pull_request.title }}" =~ "bump prettier from" ]] || [[ "${{ github.event.pull_request.title }}" =~ "bump the prettier group with" ]]; then
             echo "Prettier update detected."
             echo "prettier_update=true" >> $GITHUB_ENV
           else
-            echo "No Stylelint or prettier updates detected."
+            echo "No Stylelint or Prettier updates detected."
           fi
 
       - name: 🆙 Set up Node.js
@@ -53,18 +53,8 @@ jobs:
         run: |
           npm run codestyle
 
-      - name: 🚦 Check for changes before committing
-        id: check_changes
-        run: |
-          if [[ -z "$(git status --porcelain)" ]]; then
-            echo "No changes to commit. Skipping auto-commit step."
-            echo "changes_detected=false" >> $GITHUB_ENV
-          else
-            echo "Changes detected. Proceeding to auto-commit step."
-            echo "changes_detected=true" >> $GITHUB_ENV
-
       - name: 🚘 Auto commit
-        if: steps.check_changes.outputs.changes_detected == 'true' && (env.stylelint_update == 'true' || env.prettier_update == 'true')
+        if: env.stylelint_update == 'true' || env.prettier_update == 'true'
         uses: ./.github/actions/auto-commit
         with:
           branch-name: "${{ github.head_ref }}-auto"
