fix: added missing condition

--- a/.github/actions/auto-commit/action.yml
+++ b/.github/actions/auto-commit/action.yml
@@ -69,6 +69,7 @@ runs:
 
     # https://docs.github.com/en/apps/creating-github-apps/authenticating-with-a-github-app/making-authenticated-api-requests-with-a-github-app-in-a-github-actions-workflow
     - name: 🧬 Generate a token
+      if: env.changes_detected == 'true'
       id: generate-token
       uses: actions/create-github-app-token@v2
       with:
