refactor(cicd): node-version single source of truth
currently we define the node version as a default value in the actions as well as in the .nvmrc

--- a/.github/actions/npm-cache/action.yml
+++ b/.github/actions/npm-cache/action.yml
@@ -13,7 +13,6 @@ inputs:
   nodeVersion:
     description: "Node version"
     required: false
-    default: "24"
 runs:
   using: "composite"
   steps:
@@ -23,6 +22,7 @@ runs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ inputs.nodeVersion }}
+        node-version-file: ".nvmrc"
 
     - name: 🖼️ Display node and npm version
       shell: bash
