--- a/scripts/package.json
+++ b/scripts/package.json
@@ -6,35 +6,35 @@
   "scripts": {
     "build": "npm-run-all build:foundations build:components build:migration build:stylelint",
     "build-outputs": "pnpm --parallel run '/^build-outputs:[^:]*$/'",
-    "build-outputs:components": "npm run copy-output --workspace=@db-ux/core-components",
-    "build-outputs:foundations": "npm run copy-build --workspace=@db-ux/core-foundations",
-    "build-outputs:migration": "npm run copy-build --workspace=@db-ux/core-migration",
-    "build-outputs:ngx-core-components": "npm run build --workspace=@db-ux/ngx-core-components",
-    "build-outputs:react-core-components": "npm run build --workspace=@db-ux/react-core-components",
-    "build-outputs:stencil-components": "npm run build --workspace=@db-ux/wc-core-components",
-    "build-outputs:stylelint": "npm run copy-output --workspace=@db-ux/core-stylelint",
-    "build-outputs:v-core-components": "npm run build --workspace=@db-ux/v-core-components",
-    "build-outputs:wc-core-components": "npm run build --workspace=@db-ux/wc-core-components",
+    "build-outputs:components": "pnpm run copy-output --filter=@db-ux/core-components",
+    "build-outputs:foundations": "pnpm run copy-build --filter=@db-ux/core-foundations",
+    "build-outputs:migration": "pnpm run copy-build --filter=@db-ux/core-migration",
+    "build-outputs:ngx-core-components": "pnpm run build --filter=@db-ux/ngx-core-components",
+    "build-outputs:react-core-components": "pnpm run build --filter=@db-ux/react-core-components",
+    "build-outputs:stencil-components": "pnpm run build --filter=@db-ux/wc-core-components",
+    "build-outputs:stylelint": "pnpm run copy-output --filter=@db-ux/core-stylelint",
+    "build-outputs:v-core-components": "pnpm run build --filter=@db-ux/v-core-components",
+    "build-outputs:wc-core-components": "pnpm run build --filter=@db-ux/wc-core-components",
     "build-showcases": "pnpm --parallel run '/^build-showcases:[^:]*$/'",
-    "build-showcases:angular": "npm run build --workspace=angular-showcase",
-    "build-showcases:angular-ssr": "npm run build --workspace=angular-ssr-showcase",
-    "build-showcases:next": "npm run build --workspace=next-showcase",
-    "build-showcases:nuxt": "npm run generate --workspace=nuxt-showcase",
-    "build-showcases:patternhub": "npm run build --workspace=patternhub",
-    "build-showcases:react": "npm run build --workspace=react-showcase",
-    "build-showcases:stencil": "npm run build --workspace=stencil-showcase",
-    "build-showcases:vue": "npm run build --workspace=vue-showcase",
-    "build:components": "npm run build --workspace=@db-ux/core-components",
-    "build:foundations": "npm run build --workspace=@db-ux/core-foundations",
-    "build:migration": "npm run build --workspace=@db-ux/core-migration",
-    "build:stylelint": "npm run build --workspace=@db-ux/core-stylelint",
+    "build-showcases:angular": "pnpm run build --filter=angular-showcase",
+    "build-showcases:angular-ssr": "pnpm run build --filter=angular-ssr-showcase",
+    "build-showcases:next": "pnpm run build --filter=next-showcase",
+    "build-showcases:nuxt": "pnpm run generate --filter=nuxt-showcase",
+    "build-showcases:patternhub": "pnpm run build --filter=patternhub",
+    "build-showcases:react": "pnpm run build --filter=react-showcase",
+    "build-showcases:stencil": "pnpm run build --filter=stencil-showcase",
+    "build-showcases:vue": "pnpm run build --filter=vue-showcase",
+    "build:components": "pnpm run build --filter=@db-ux/core-components",
+    "build:foundations": "pnpm run build --filter=@db-ux/core-foundations",
+    "build:migration": "pnpm run build --filter=@db-ux/core-migration",
+    "build:stylelint": "pnpm run build --filter=@db-ux/core-stylelint",
     "dev": "tsx dev.js",
-    "dev:angular-components": "npm run dev:angular --workspace=@db-ux/core-components",
-    "dev:plain-html-components": "npm run dev:html --workspace=@db-ux/core-components",
-    "dev:react-components": "npm run dev:react --workspace=@db-ux/core-components",
-    "dev:sass": "npm run dev:scss --workspace=@db-ux/core-components",
-    "dev:stencil-components": "npm run dev:stencil --workspace=@db-ux/core-components",
-    "dev:vue-components": "npm run dev:vue --workspace=@db-ux/core-components",
+    "dev:angular-components": "pnpm run dev:angular --filter=@db-ux/core-components",
+    "dev:plain-html-components": "pnpm run dev:html --filter=@db-ux/core-components",
+    "dev:react-components": "pnpm run dev:react --filter=@db-ux/core-components",
+    "dev:sass": "pnpm run dev:scss --filter=@db-ux/core-components",
+    "dev:stencil-components": "pnpm run dev:stencil --filter=@db-ux/core-components",
+    "dev:vue-components": "pnpm run dev:vue --filter=@db-ux/core-components",
     "rm-builds:components-build": "rimraf ../packages/components/build",
     "rm-builds:dist": "rimraf --glob showcases/**/dist",
     "rm-builds:foundations-build": "rimraf ../packages/foundations/build",
@@ -54,17 +54,17 @@
     "rm-builds:playwright": "rimraf --glob output/react/playwright",
     "rm-builds:showcases-build": "rimraf --glob  build-showcases/**",
     "rm:builds": "pnpm --parallel run '/^rm-builds:[^:]*$/'",
-    "start-showcase:angular": "npm run dev --workspace=angular-showcase",
-    "start-showcase:angular-ssr": "npm run dev --workspace=angular-ssr-showcase",
-    "start-showcase:next": "npm run dev --workspace=next-showcase",
-    "start-showcase:nuxt": "npm run dev --workspace=nuxt-showcase",
-    "start-showcase:patternhub": "npm run dev --workspace=patternhub",
-    "start-showcase:react": "npm run dev --workspace=react-showcase",
-    "start-showcase:stencil": "npm run dev --workspace=stencil-showcase",
-    "start-showcase:vue": "npm run dev --workspace=vue-showcase",
-    "start:foundations": "npm run start --workspace=@db-ux/core-foundations",
+    "start-showcase:angular": "pnpm run dev --filter=angular-showcase",
+    "start-showcase:angular-ssr": "pnpm run dev --filter=angular-ssr-showcase",
+    "start-showcase:next": "pnpm run dev --filter=next-showcase",
+    "start-showcase:nuxt": "pnpm run dev --filter=nuxt-showcase",
+    "start-showcase:patternhub": "pnpm run dev --filter=patternhub",
+    "start-showcase:react": "pnpm run dev --filter=react-showcase",
+    "start-showcase:stencil": "pnpm run dev --filter=stencil-showcase",
+    "start-showcase:vue": "pnpm run dev --filter=vue-showcase",
+    "start:foundations": "pnpm run start --filter=@db-ux/core-foundations",
     "test": "pnpm --parallel run '/^test:[^:]*$/'",
-    "test:migration": "npm run test --workspace=@db-ux/core-migration",
+    "test:migration": "pnpm run test --filter=@db-ux/core-migration",
     "test:scripts": "vitest run --config vitest.config.ts",
     "update:icon-fonts": "npm-run-all generate:icon-fonts generate:icon-types"
   },
