--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -22,8 +22,9 @@ jobs:
   codeql:
     uses: ./.github/workflows/99-codeql-analysis.yml
 
-  dependency-review:
-    uses: ./.github/workflows/99-dependency-review.yml
+  # TODO: use again after https://github.com/actions/dependency-review-action/pull/918 got merged
+  # dependency-review:
+  #   uses: ./.github/workflows/99-dependency-review.yml
 
   labeler:
     if: github.event.pull_request.head.repo.owner.login == 'db-ux-design-system'
