--- a/.github/workflows/01-lint.yml
+++ b/.github/workflows/01-lint.yml
@@ -16,8 +16,8 @@ jobs:
 
       - name: ⚡ Run Lint
         run: |
-          pnpm run postinstall --filter=nuxt-showcase
-          pnpm run build --filter=@db-ux/core-stylelint
+          pnpm --filter=nuxt-showcase run postinstall
+          pnpm --filter=@db-ux/core-stylelint run build
           pnpm run lint
 
       - name: 💀 Killing me softly
