--- a/scripts/package.json
+++ b/scripts/package.json
@@ -6,35 +6,35 @@
   "scripts": {
     "build": "npm-run-all build:foundations build:components build:migration build:stylelint",
     "build-outputs": "pnpm --parallel run '/^build-outputs:[^:]*$/'",
-    "build-outputs:components": "pnpm run copy-output --filter=@db-ux/core-components",
-    "build-outputs:foundations": "pnpm run copy-build --filter=@db-ux/core-foundations",
-    "build-outputs:migration": "pnpm run copy-build --filter=@db-ux/core-migration",
-    "build-outputs:ngx-core-components": "pnpm run build --filter=@db-ux/ngx-core-components",
-    "build-outputs:react-core-components": "pnpm run build --filter=@db-ux/react-core-components",
-    "build-outputs:stencil-components": "pnpm run build --filter=@db-ux/wc-core-components",
-    "build-outputs:stylelint": "pnpm run copy-output --filter=@db-ux/core-stylelint",
-    "build-outputs:v-core-components": "pnpm run build --filter=@db-ux/v-core-components",
-    "build-outputs:wc-core-components": "pnpm run build --filter=@db-ux/wc-core-components",
+    "build-outputs:components": "pnpm --filter=@db-ux/core-components run copy-output",
+    "build-outputs:foundations": "pnpm --filter=@db-ux/core-foundations run copy-build",
+    "build-outputs:migration": "pnpm --filter=@db-ux/core-migration run copy-build",
+    "build-outputs:ngx-core-components": "pnpm --filter=@db-ux/ngx-core-components run build",
+    "build-outputs:react-core-components": "pnpm --filter=@db-ux/react-core-components run build",
+    "build-outputs:stencil-components": "pnpm --filter=@db-ux/wc-core-components run build",
+    "build-outputs:stylelint": "pnpm --filter=@db-ux/core-stylelint run copy-output",
+    "build-outputs:v-core-components": "pnpm --filter=@db-ux/v-core-components run build",
+    "build-outputs:wc-core-components": "pnpm --filter=@db-ux/wc-core-components run build",
     "build-showcases": "pnpm --parallel run '/^build-showcases:[^:]*$/'",
-    "build-showcases:angular": "pnpm run build --filter=angular-showcase",
-    "build-showcases:angular-ssr": "pnpm run build --filter=angular-ssr-showcase",
-    "build-showcases:next": "pnpm run build --filter=next-showcase",
-    "build-showcases:nuxt": "pnpm run generate --filter=nuxt-showcase",
-    "build-showcases:patternhub": "pnpm run build --filter=patternhub",
-    "build-showcases:react": "pnpm run build --filter=react-showcase",
-    "build-showcases:stencil": "pnpm run build --filter=stencil-showcase",
-    "build-showcases:vue": "pnpm run build --filter=vue-showcase",
-    "build:components": "pnpm run build --filter=@db-ux/core-components",
-    "build:foundations": "pnpm run build --filter=@db-ux/core-foundations",
-    "build:migration": "pnpm run build --filter=@db-ux/core-migration",
-    "build:stylelint": "pnpm run build --filter=@db-ux/core-stylelint",
+    "build-showcases:angular": "pnpm --filter=angular-showcase run build",
+    "build-showcases:angular-ssr": "pnpm --filter=angular-ssr-showcase run build",
+    "build-showcases:next": "pnpm --filter=next-showcase run build",
+    "build-showcases:nuxt": "pnpm --filter=nuxt-showcase run generate",
+    "build-showcases:patternhub": "pnpm --filter=patternhub run build",
+    "build-showcases:react": "pnpm --filter=react-showcase run build",
+    "build-showcases:stencil": "pnpm --filter=stencil-showcase run build",
+    "build-showcases:vue": "pnpm --filter=vue-showcase run build",
+    "build:components": "pnpm --filter=@db-ux/core-components run build",
+    "build:foundations": "pnpm --filter=@db-ux/core-foundations run build",
+    "build:migration": "pnpm --filter=@db-ux/core-migration run build",
+    "build:stylelint": "pnpm --filter=@db-ux/core-stylelint run build",
     "dev": "tsx dev.js",
-    "dev:angular-components": "pnpm run dev:angular --filter=@db-ux/core-components",
-    "dev:plain-html-components": "pnpm run dev:html --filter=@db-ux/core-components",
-    "dev:react-components": "pnpm run dev:react --filter=@db-ux/core-components",
-    "dev:sass": "pnpm run dev:scss --filter=@db-ux/core-components",
-    "dev:stencil-components": "pnpm run dev:stencil --filter=@db-ux/core-components",
-    "dev:vue-components": "pnpm run dev:vue --filter=@db-ux/core-components",
+    "dev:angular-components": "pnpm --filter=@db-ux/core-components run dev:angular",
+    "dev:plain-html-components": "pnpm --filter=@db-ux/core-components run dev:html",
+    "dev:react-components": "pnpm --filter=@db-ux/core-components run dev:react",
+    "dev:sass": "pnpm --filter=@db-ux/core-components run dev:scss",
+    "dev:stencil-components": "pnpm --filter=@db-ux/core-components run dev:stencil",
+    "dev:vue-components": "pnpm --filter=@db-ux/core-components run dev:vue",
     "rm-builds:components-build": "rimraf ../packages/components/build",
     "rm-builds:dist": "rimraf --glob showcases/**/dist",
     "rm-builds:foundations-build": "rimraf ../packages/foundations/build",
@@ -54,17 +54,17 @@
     "rm-builds:playwright": "rimraf --glob output/react/playwright",
     "rm-builds:showcases-build": "rimraf --glob  build-showcases/**",
     "rm:builds": "pnpm --parallel run '/^rm-builds:[^:]*$/'",
-    "start-showcase:angular": "pnpm run dev --filter=angular-showcase",
-    "start-showcase:angular-ssr": "pnpm run dev --filter=angular-ssr-showcase",
-    "start-showcase:next": "pnpm run dev --filter=next-showcase",
-    "start-showcase:nuxt": "pnpm run dev --filter=nuxt-showcase",
-    "start-showcase:patternhub": "pnpm run dev --filter=patternhub",
-    "start-showcase:react": "pnpm run dev --filter=react-showcase",
-    "start-showcase:stencil": "pnpm run dev --filter=stencil-showcase",
-    "start-showcase:vue": "pnpm run dev --filter=vue-showcase",
-    "start:foundations": "pnpm run start --filter=@db-ux/core-foundations",
+    "start-showcase:angular": "pnpm --filter=angular-showcase run dev",
+    "start-showcase:angular-ssr": "pnpm --filter=angular-ssr-showcase run dev",
+    "start-showcase:next": "pnpm --filter=next-showcase run dev",
+    "start-showcase:nuxt": "pnpm --filter=nuxt-showcase run dev",
+    "start-showcase:patternhub": "pnpm --filter=patternhub run dev",
+    "start-showcase:react": "pnpm --filter=react-showcase run dev",
+    "start-showcase:stencil": "pnpm --filter=stencil-showcase run dev",
+    "start-showcase:vue": "pnpm --filter=vue-showcase run dev",
+    "start:foundations": "pnpm --filter=@db-ux/core-foundations run start",
     "test": "pnpm --parallel run '/^test:[^:]*$/'",
-    "test:migration": "pnpm run test --filter=@db-ux/core-migration",
+    "test:migration": "pnpm --filter=@db-ux/core-migration run test",
     "test:scripts": "vitest run --config vitest.config.ts",
     "update:icon-fonts": "npm-run-all generate:icon-fonts generate:icon-types"
   },
