--- a/.github/workflows/01-build-showcases.yml
+++ b/.github/workflows/01-build-showcases.yml
@@ -41,7 +41,7 @@ jobs:
         env:
           ASSET_INIT_VECTOR: ${{ secrets.ASSET_INIT_VECTOR }}
           ASSET_PASSWORD: ${{ secrets.ASSET_PASSWORD }}
-        run: pnpm run build --filter=${{ inputs.showcase }}
+        run: pnpm --filter=${{ inputs.showcase }} run build
 
       - name: ⏫ Upload ${{ inputs.showcase }}
         uses: actions/upload-artifact@v4
