--- a/.github/workflows/01-test.yml
+++ b/.github/workflows/01-test.yml
@@ -15,7 +15,7 @@ jobs:
         uses: ./.github/actions/npm-cache
 
       - name: ⚡ Run Test
-        run: npm run test
+        run: pnpm run test
 
       - name: 💀 Killing me softly
         uses: ./.github/actions/cancel-workflow
