--- a/packages/foundations/package.json
+++ b/packages/foundations/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "build": "pnpm run '/^build:[^:]*$/'",
     "build:01_normalize": "pnpm run '/^copy-prepare:[^:]*$/'",
-    "build:02_copy": "npm run copy:scss",
+    "build:02_copy": "pnpm run copy:scss",
     "build:03_css": "sass --no-source-map --load-path=node_modules/ --load-path=../../node_modules/ build/styles  --fatal-deprecation=mixed-decls",
     "build:04_tailwind": "cpr tailwind build/tailwind --overwrite",
     "build:05_postcss": "postcss build/styles/**/*.css --replace",
