--- a/showcases/angular-showcase/package.json
+++ b/showcases/angular-showcase/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "ng build",
-    "dev": "npm run start -- --open",
+    "dev": "pnpm run start --open",
     "ng": "ng",
     "preview": "npx http-server ../../build-showcases",
     "start": "ng serve --serve-path angular-showcase",
@@ -12,7 +12,7 @@
     "test:aria-snapshots": "cross-env showcase=angular-showcase npx playwright test --config=../playwright.aria-snapshots.ts",
     "test:axe-core": "cross-env showcase=angular-showcase npx playwright test --config=../playwright.axe-core.ts",
     "test:e2e": "cross-env showcase=angular-showcase npx playwright test --config=../playwright.config.ts",
-    "test:ui": "npm run test:e2e -- --ui",
+    "test:ui": "pnpm run test:e2e --ui",
     "test:visual-snapshots": "cross-env showcase=angular-showcase npx playwright test --config=../playwright.visual-snapshots.ts",
     "watch": "ng build --watch --configuration development"
   },
